# swole

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini
base/models/: entity.py  safe.py
config/: settings.py  urls.py
scripts/: clean.sh
templates/: _base.html  home.html
templates/account/: login.html  logout.html  logout_base.html  signup.html
templates/workouts/: exercise_create.html  exercise_get_all.html  set_create.html  set_delete.html  set_get.html  set_get_all.html  set_update.html  workout_create.html  workout_create_base.html  workout_delete.html  workout_detail.html  workout_detail_base.html  workout_get_all.html  workout_get_all_base.html
tests/: conftest.py  factories.py
tests/exercise_tests/: exercise_tests.py
tests/set_tests/: set_tests.py
tests/workout_tests/: workout_tests.py
users/: admin.py  urls.py  views.py
users/forms/: UserChangeForm.py  UserCreationForm.py  __init__.py
users/migrations/: 0001_initial.py
utils/: decorators.py  response_context.py  view_helper.py
workouts/: urls.py
workouts/forms/: __init__.py  exercise_forms.py  set_forms.py  workout_forms.py
workouts/logic/: base_repository.py  exercise_logic.py  set_repository.py  workout_repository.py
workouts/migrations/: 0001_initial.py  0002_alter_exercise_name.py  0003_alter_workout_name_alter_workout_unique_together.py  0004_alter_workout_name.py  0005_alter_set_weight_alter_workout_date.py  0006_workout_is_deleted_alter_set_weight.py  0007_remove_workout_is_deleted_workout_deleted_at_and_more.py  (+1 more)
(+11 files in other folders)
